Speed up compile times by not including wtf/Variant.h so much https://bugs.webkit.org/show_bug.cgi?id=160847

Patch by Sam Weinig <sam@webkit.org> on 2016-08-15
Reviewed by Alex Christensen and Saam Barati.

Source/WebCore:

"using std::experimental::variant" caused internal compiler errors in MSVC2015,
so we are just writing std::experimental where we use it for now.
We should move variant into the std::experimental namespace.

* bindings/js/JSNodeOrString.cpp:
(WebCore::toNodeOrStringVector):
* bindings/js/JSNodeOrString.h:
* dom/ContainerNode.cpp:
(WebCore::ContainerNode::childElementCount):
(WebCore::ContainerNode::append):
(WebCore::ContainerNode::prepend):
* dom/ContainerNode.h:
* dom/Node.cpp:
(WebCore::Node::appendChild):
(WebCore::nodeSetPreTransformedFromNodeOrStringVector):
(WebCore::firstFollowingSiblingNotInNodeSet):
(WebCore::Node::convertNodesOrStringsIntoNode):
(WebCore::Node::before):
(WebCore::Node::after):
(WebCore::Node::replaceWith):
* dom/Node.h:
(WebCore::Node::setStyleChange):
(WebCore::Node::customPseudoId):

Source/WTF:

* wtf/Forward.h:
Add forward declaration of std::variant.

* wtf/StdLibExtras.h:
Remove references to std::variant. Move them to wtf/Variant.h

Tools:

* TestWebKitAPI/Tests/WTF/Variant.cpp:
(TestWebKitAPI::TEST):
Explicitly use std::experimental::variant.

Canonical link: https://commits.webkit.org/178989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204493 268f45cc-cd09-0410-ab3c-d52691b4dbfc