Tools/TestWebKitAPI/Tests/WTF/Variant.cpp
@@ -37,37 +37,37 @@ namespace TestWebKitAPI {
 
 TEST(WTF_Variant, Initial)
 {
-    std::variant<int, double> v1;
+    std::experimental::variant<int, double> v1;
     EXPECT_TRUE(v1.index() == 0);
-    EXPECT_TRUE(std::get<int>(v1) == 0);
+    EXPECT_TRUE(std::experimental::get<int>(v1) == 0);
 
     struct T {
         T() : value(15) { }
         int value;
     };
 
-    std::variant<T, int> v2;
+    std::experimental::variant<T, int> v2;
     EXPECT_TRUE(v2.index() == 0);
-    EXPECT_TRUE(std::get<T>(v2).value == 15);
+    EXPECT_TRUE(std::experimental::get<T>(v2).value == 15);
 }
 
 TEST(WTF_Variant, Basic)
 {
-    std::variant<int, double> variant = 1;
+    std::experimental::variant<int, double> variant = 1;
     EXPECT_TRUE(variant.index() == 0);
-    EXPECT_TRUE(std::get<int>(variant) == 1);
-    EXPECT_TRUE(*std::get_if<int>(variant) == 1);
-    EXPECT_TRUE(std::get_if<double>(variant) == nullptr);
-    EXPECT_TRUE(std::holds_alternative<int>(variant));
-    EXPECT_FALSE(std::holds_alternative<double>(variant));
+    EXPECT_TRUE(std::experimental::get<int>(variant) == 1);
+    EXPECT_TRUE(*std::experimental::get_if<int>(variant) == 1);
+    EXPECT_TRUE(std::experimental::get_if<double>(variant) == nullptr);
+    EXPECT_TRUE(std::experimental::holds_alternative<int>(variant));
+    EXPECT_FALSE(std::experimental::holds_alternative<double>(variant));
 
     variant = 1.0;
     EXPECT_TRUE(variant.index() == 1);
-    EXPECT_TRUE(std::get<double>(variant) == 1);
-    EXPECT_TRUE(*std::get_if<double>(variant) == 1.0);
-    EXPECT_TRUE(std::get_if<int>(variant) == nullptr);
-    EXPECT_TRUE(std::holds_alternative<double>(variant));
-    EXPECT_FALSE(std::holds_alternative<int>(variant));
+    EXPECT_TRUE(std::experimental::get<double>(variant) == 1);
+    EXPECT_TRUE(*std::experimental::get_if<double>(variant) == 1.0);
+    EXPECT_TRUE(std::experimental::get_if<int>(variant) == nullptr);
+    EXPECT_TRUE(std::experimental::holds_alternative<double>(variant));
+    EXPECT_FALSE(std::experimental::holds_alternative<int>(variant));
 }
 
 TEST(WTF_Variant, BasicVisitor)
@@ -94,18 +94,18 @@ TEST(WTF_Variant, BasicVisitor)
 
     Type type = Type::None;
 
-    std::variant<int, float, String> variant = 8;
-    std::visit(Visitor(type), variant);
+    std::experimental::variant<int, float, String> variant = 8;
+    std::experimental::visit(Visitor(type), variant);
     EXPECT_TRUE(Type::Int == type);
 
 
     variant = 1.0f;
-    std::visit(Visitor(type), variant);
+    std::experimental::visit(Visitor(type), variant);
     EXPECT_TRUE(Type::Float == type);
 
 
     variant = "hello";
-    std::visit(Visitor(type), variant);
+    std::experimental::visit(Visitor(type), variant);
     EXPECT_TRUE(Type::String == type);
 }
 
@@ -126,18 +126,18 @@ TEST(WTF_Variant, VisitorUsingMakeVisitor)
         [&](String) { type = Type::String; }
     );
 
-    std::variant<int, float, String> variant = 8;
-    std::visit(visitor, variant);
+    std::experimental::variant<int, float, String> variant = 8;
+    std::experimental::visit(visitor, variant);
     EXPECT_TRUE(Type::Int == type);
 
 
     variant = 1.0f;
-    std::visit(visitor, variant);
+    std::experimental::visit(visitor, variant);
     EXPECT_TRUE(Type::Float == type);
 
 
     variant = "hello";
-    std::visit(visitor, variant);
+    std::experimental::visit(visitor, variant);
     EXPECT_TRUE(Type::String == type);
 }
 
@@ -147,7 +147,7 @@ TEST(WTF_Variant, ConstructorDestructor)
 
     {
         auto uniquePtr = std::make_unique<ConstructorDestructorCounter>();
-        std::variant<std::unique_ptr<ConstructorDestructorCounter>, int> v = WTFMove(uniquePtr);
+        std::experimental::variant<std::unique_ptr<ConstructorDestructorCounter>, int> v = WTFMove(uniquePtr);
 
         EXPECT_EQ(1u, ConstructorDestructorCounter::constructionCount);
         EXPECT_EQ(0u, ConstructorDestructorCounter::destructionCount);
@@ -162,7 +162,7 @@ TEST(WTF_Variant, RefPtr)
     {
         RefLogger a("a");
         RefPtr<RefLogger> ref(&a);
-        std::variant<RefPtr<RefLogger>, int> v = ref;
+        std::experimental::variant<RefPtr<RefLogger>, int> v = ref;
     }
 
     ASSERT_STREQ("ref(a) ref(a) deref(a) deref(a) ", takeLogStr().c_str());
@@ -170,7 +170,7 @@ TEST(WTF_Variant, RefPtr)
     {
         RefLogger a("a");
         RefPtr<RefLogger> ref(&a);
-        std::variant<RefPtr<RefLogger>, int> v = WTFMove(ref);
+        std::experimental::variant<RefPtr<RefLogger>, int> v = WTFMove(ref);
     }
 
     ASSERT_STREQ("ref(a) deref(a) ", takeLogStr().c_str());
@@ -181,7 +181,7 @@ TEST(WTF_Variant, Ref)
     {
         RefLogger a("a");
         Ref<RefLogger> ref(a);
-        std::variant<Ref<RefLogger>, int> v = WTFMove(ref);
+        std::experimental::variant<Ref<RefLogger>, int> v = WTFMove(ref);
     }
 
     ASSERT_STREQ("ref(a) deref(a) ", takeLogStr().c_str());
